# cleanvid

./: .gitignore  Dockerfile  LICENSE  README.md  build_docker.sh  caselessdictionary.py  cleanvid-docker.sh  cleanvid.lpi  cleanvid.lpr  cleanvid.py  cvutil.pas  requirements.txt  setup.cfg  swears.txt
.github/workflows/: cleanvid-build-push-ghcr.yml  publish-to-pypi.yml
docker/: Dockerfile  build_docker.sh  cleanvid-docker.sh
src/cleanvid/: __init__.py  caselessdictionary.py  cleanvid.py  swears.txt
