[metadata]
name = cleanvid
version = 1.5.3
author = Seth Grover
author_email = mero.mero.guero@gmail.com
description = cleanvid is a little script to mute profanity in video files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmguero/cleanvid
project_urls =
    Bug Tracker = https://github.com/mmguero/cleanvid/issues
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Video

[options]
package_dir =
    = src
packages = find:
zip_safe = False
python_requires = >=3.6
install_requires =
    babelfish
    delegator.py
    pysrt
    subliminal

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    cleanvid = cleanvid:RunCleanvid

[options.packages.find]
where = src